# base_django_project

./: .gitignore  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
src/: Dockerfile
src/apps/: __init__.py
src/config/: settings.py
