[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Eldar  <cooperative.entr@gmail.com>"]
readme = "README.md"
packages = [{include = "project_name"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"
loguru = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
